fixing some broke styles for icons on mobile

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -2840,7 +2840,15 @@ At some point, update mediaqueries to be in EMS
     vertical-align: middle;
     margin: 0em 0em 0em .5em;
   }
-  .detailPanel .detailPanelBody .detailBottomRow .detailTrailheadAmenities .detailTrailheadIcons .amenity-icons {
+  .detailPanel .detailPanelBody .detailBottomRow .detailTrailheadAmenities .detailTrailheadIcons .icon {
+    position: relative;
+    display: inline-block;
+    height: 2em;
+    width: auto;
+    vertical-align: middle;
+  }
+  .detailPanel .detailPanelBody .detailBottomRow .detailTrailheadAmenities .detailTrailheadIcons .icon .amenity-icons {
+    vertical-align: middle;
     height: 100%;
     width: auto;
     position: relative;
