--- a/styles/less/detail.less
+++ b/styles/less/detail.less
@@ -566,12 +566,19 @@
 						width: auto;
 						vertical-align: middle;
 						margin: 0em 0em 0em .5em;
-						.amenity-icons {
-							height: 100%;
-							width: auto;
+						.icon {
 							position: relative;
 							display: inline-block;
-
+							height: 2em;
+							width: auto;
+							vertical-align: middle;
+							.amenity-icons {
+								vertical-align: middle;
+								height: 100%;
+								width: auto;
+								position: relative;
+								display: inline-block;
+							}
 						}
 					}
 				}
